src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__album_details_ui__album_details_ui_tests__tests__snapshot_tests__album_details_renders_AlbumHistorySortPrompt_1.snap
---
source: src/ui/lidarr_ui/library/album_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
             ╭  Test Album Details  ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮               
             │ Tracks │ History │ Manual Search                                                                                                      │               
             │───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│               
             │   Source Title                                       Event Type                 Quality              Date                             │               
             │=> Test source title                                  grabbed                    Lossless             2023-01-01 00:00:00 UTC          │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                      ╭─────────────────────────╮                                                      │               
             │                                                      │Something                │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      │                         │                                                      │               
             │                                                      ╰─────────────────────────╯                                                      │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
