src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__album_details_ui__album_details_ui_tests__tests__snapshot_tests__album_details_renders_AutomaticallySearchAlbumPrompt_0.snap
---
source: src/ui/lidarr_ui/library/album_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
             ╭  Test Album Details  ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮               
             │ Tracks │ History │ Manual Search                                                                                                      │               
             │───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│               
             │   #       Title                                      Duration   Audio Info                                        Quality             │               
             │=> 1       Test title                                 3:20       FLAC - 2.0 - 1563 kbps - 44.1kHz - 24bit          Lossless            │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                     ╭────────────────  Automatic Album Search  ─────────────────╮                                     │               
             │                                     │Do you want to trigger an automatic search of your indexers│                                     │               
             │                                     │                for the album: Test Album?                 │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │                                                           │                                     │               
             │                                     │╭────────────────────────────╮╭───────────────────────────╮│                                     │               
             │                                     ││             Yes            ││            No             ││                                     │               
             │                                     │╰────────────────────────────╯╰───────────────────────────╯│                                     │               
             │                                     ╰───────────────────────────────────────────────────────────╯                                     │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
